--- a/src/0-system/technical-info.stories.mdx
+++ b/src/0-system/technical-info.stories.mdx
@@ -1,5 +1,5 @@
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
-import { linkTo } from '@storybook/addon-links';
+import { linkTo } from "@storybook/addon-links";
 import Masthead from "../_docs/masthead";
 import AoC from "../_docs/aoc";
 import Footer from "../_docs/footer";
@@ -26,18 +26,12 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="system-introduction--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="system-technical-info--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-technical-info--page">
 											Technical Info <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
