--- a/src/0-system/0-introduction.stories.mdx
+++ b/src/0-system/0-introduction.stories.mdx
@@ -26,18 +26,12 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="system-introduction--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="system-introduction--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
 											Introduction <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
@@ -56,70 +50,49 @@ import LinkTo from "@storybook/addon-links/react";
 				<div className="act-flex__row">
 					<div className="act-col act-col-sm-3">
 						<div className="act-box">
-							<LinkTo
-								className="act-button act-button__normal act-button__primary"
-								kind="system-introduction--page"
-							>
+							<LinkTo className="act-button act-button__normal act-button__primary" kind="system-introduction--page">
 								System
 							</LinkTo>
 						</div>
 					</div>
 					<div className="act-col act-col-sm-3">
 						<div className="act-box">
-							<LinkTo
-								className="act-button act-button__normal act-button__primary"
-								kind="guidelines-overview--page"
-							>
+							<LinkTo className="act-button act-button__normal act-button__primary" kind="guidelines-overview--page">
 								Guidelines
 							</LinkTo>
 						</div>
 					</div>
 					<div className="act-col act-col-sm-3">
 						<div className="act-box">
-							<LinkTo
-								className="act-button act-button__normal act-button__primary"
-								kind="design-tokens-overview--page"
-							>
+							<LinkTo className="act-button act-button__normal act-button__primary" kind="design-tokens-overview--page">
 								Design Tokens
 							</LinkTo>
 						</div>
 					</div>
 					<div className="act-col act-col-sm-3">
 						<div className="act-box">
-							<LinkTo
-								className="act-button act-button__normal act-button__primary"
-								kind="layout-overview--page"
-							>
+							<LinkTo className="act-button act-button__normal act-button__primary" kind="layout-overview--page">
 								Layout
 							</LinkTo>
 						</div>
 					</div>
 					<div className="act-col act-col-sm-3">
 						<div className="act-box">
-							<LinkTo
-								className="act-button act-button__normal act-button__primary"
-								kind="components-overview--page"
-							>
+							<LinkTo className="act-button act-button__normal act-button__primary" kind="components-overview--page">
 								Components
 							</LinkTo>
 						</div>
 					</div>
 					<div className="act-col act-col-sm-3">
 						<div className="act-box">
-							<LinkTo
-								className="act-button act-button__normal act-button__primary"
-								kind="patterns-overview--page"
-							>
+							<LinkTo className="act-button act-button__normal act-button__primary" kind="patterns-overview--page">
 								Patterns
 							</LinkTo>
 						</div>
 					</div>
 					<div className="act-col act-col-sm-3">
 						<div className="act-box">
-							<LinkTo
-								className="act-button act-button__normal act-button__primary"
-								kind="previews-overview--page"
-							>
+							<LinkTo className="act-button act-button__normal act-button__primary" kind="previews-overview--page">
 								Previews
 							</LinkTo>
 						</div>
