--- a/src/1-guidelines/0-overview.stories.mdx
+++ b/src/1-guidelines/0-overview.stories.mdx
@@ -26,18 +26,12 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="system-introduction--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="guidelines-overview--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="guidelines-overview--page">
 											Guidelines <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
