--- a/src/2-design-tokens/colours.stories.mdx
+++ b/src/2-design-tokens/colours.stories.mdx
@@ -26,26 +26,17 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="system-introduction--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="design-tokens-overview--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-overview--page">
 											Design Tokens <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="design-tokens-colours--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-colours--page">
 											Colours <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
@@ -107,84 +98,138 @@ import LinkTo from "@storybook/addon-links/react";
 									<tbody>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#472D8C' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#472D8C" }}></span>
 												<p className="act-p-small">Purple</p>
 											</td>
-											<td><code className="hex">#472D8C</code></td>
-											<td><code className="sass-var">$act-colour__purple</code></td>
-											<td><code>map-get($act-colour, "purple")</code></td>
+											<td>
+												<code className="hex">#472D8C</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__purple</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "purple")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#1E0F48' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#1E0F48" }}></span>
 												<p className="act-p-small">Violet</p>
 											</td>
-											<td><code className="hex">#1E0F48</code></td>
-											<td><code className="sass-var">$act-colour__violet</code></td>
-											<td><code>map-get($act-colour, "violet")</code></td>
+											<td>
+												<code className="hex">#1E0F48</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__violet</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "violet")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#311C6A' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#311C6A" }}></span>
 												<p className="act-p-small">Indigo</p>
 											</td>
-											<td><code className="hex">#311C6A</code></td>
-											<td><code className="sass-var">$act-colour__indigo</code></td>
-											<td><code>map-get($act-colour, "indigo")</code></td>
+											<td>
+												<code className="hex">#311C6A</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__indigo</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "indigo")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#6042AE' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#6042AE" }}></span>
 												<p className="act-p-small">Plum Purple</p>
 											</td>
-											<td><code className="hex">#6042AE</code></td>
-											<td><code className="sass-var">$act-colour__plum-purple</code></td>
-											<td><code>map-get($act-colour, "plum-purple")</code></td>
+											<td>
+												<code className="hex">#6042AE</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__plum-purple</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "plum-purple")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#9A78F2' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#9A78F2" }}></span>
 												<p className="act-p-small">Medium Purple</p>
 											</td>
-											<td><code className="hex">#9A78F2</code></td>
-											<td><code className="sass-var">$act-colour__medium-purple</code></td>
-											<td><code>map-get($act-colour, "medium-purple")</code></td>
+											<td>
+												<code className="hex">#9A78F2</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__medium-purple</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "medium-purple")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#111111' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#111111" }}></span>
 												<p className="act-p-small">Black</p>
 											</td>
-											<td><code className="hex">#111111</code></td>
-											<td><code className="sass-var">$act-colour__black</code></td>
-											<td><code>map-get($act-colour, "black")</code></td>
+											<td>
+												<code className="hex">#111111</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__black</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "black")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#777777' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#777777" }}></span>
 												<p className="act-p-small">Grey</p>
 											</td>
-											<td><code className="hex">#777777</code></td>
-											<td><code className="sass-var">$act-colour__grey</code></td>
-											<td><code>map-get($act-colour, "grey")</code></td>
+											<td>
+												<code className="hex">#777777</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__grey</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "grey")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#ADADAD' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#ADADAD" }}></span>
 												<p className="act-p-small">Middle Grey</p>
 											</td>
-											<td><code className="hex">#ADADAD</code></td>
-											<td><code className="sass-var">$act-colour__middle-grey</code></td>
-											<td><code>map-get($act-colour, "middle-grey")</code></td>
+											<td>
+												<code className="hex">#ADADAD</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__middle-grey</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "middle-grey")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#FFFFFF' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#FFFFFF" }}></span>
 												<p className="act-p-small">White</p>
 											</td>
-											<td><code className="hex">#FFFFFF</code></td>
-											<td><code className="sass-var">$act-colour__white</code></td>
-											<td><code>map-get($act-colour, "white")</code></td>
+											<td>
+												<code className="hex">#FFFFFF</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__white</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "white")</code>
+											</td>
 										</tr>
 									</tbody>
 								</table>
@@ -238,30 +283,48 @@ import LinkTo from "@storybook/addon-links/react";
 									<tbody>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#098660' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#098660" }}></span>
 												<p className="act-p-small">Green</p>
 											</td>
-											<td><code className="hex">#098660</code></td>
-											<td><code className="sass-var">$act-colour__green</code></td>
-											<td><code>map-get($act-colour, "green")</code></td>
+											<td>
+												<code className="hex">#098660</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__green</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "green")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#BA2133' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#BA2133" }}></span>
 												<p className="act-p-small">Red</p>
 											</td>
-											<td><code className="hex">#BA2133</code></td>
-											<td><code className="sass-var">$act-colour__red</code></td>
-											<td><code>map-get($act-colour, "red")</code></td>
+											<td>
+												<code className="hex">#BA2133</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__red</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "red")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#F2C94C' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#F2C94C" }}></span>
 												<p className="act-p-small">Yellow</p>
 											</td>
-											<td><code className="hex">#F2C94C</code></td>
-											<td><code className="sass-var">$act-colour__yellow</code></td>
-											<td><code>map-get($act-colour, "yellow")</code></td>
+											<td>
+												<code className="hex">#F2C94C</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__yellow</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "yellow")</code>
+											</td>
 										</tr>
 									</tbody>
 								</table>
@@ -329,48 +392,78 @@ import LinkTo from "@storybook/addon-links/react";
 									<tbody>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#377E7A' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#377E7A" }}></span>
 												<p className="act-p-small">Belconnen</p>
 											</td>
-											<td><code className="hex">#377E7A</code></td>
-											<td><code className="sass-var">$act-colour__region-belconnen</code></td>
-											<td><code>map-get($act-colour, "region-belconnen")</code></td>
+											<td>
+												<code className="hex">#377E7A</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__region-belconnen</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "region-belconnen")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#90A630' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#90A630" }}></span>
 												<p className="act-p-small">Gungahlin</p>
 											</td>
-											<td><code className="hex">#90A630</code></td>
-											<td><code className="sass-var">$act-colour__region-gungahlin</code></td>
-											<td><code>map-get($act-colour, "region-gungahlin")</code></td>
+											<td>
+												<code className="hex">#90A630</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__region-gungahlin</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "region-gungahlin")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#008FC5' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#008FC5" }}></span>
 												<p className="act-p-small">Inner City</p>
 											</td>
-											<td><code className="hex">#008FC5</code></td>
-											<td><code className="sass-var">$act-colour__region-innercity</code></td>
-											<td><code>map-get($act-colour, "region-innercity")</code></td>
+											<td>
+												<code className="hex">#008FC5</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__region-innercity</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "region-innercity")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#C6B30B' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#C6B30B" }}></span>
 												<p className="act-p-small">Tuggeranong</p>
 											</td>
-											<td><code className="hex">#C6B30B</code></td>
-											<td><code className="sass-var">$act-colour__region-tuggeranong</code></td>
-											<td><code>map-get($act-colour, "region-tuggeranong")</code></td>
+											<td>
+												<code className="hex">#C6B30B</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__region-tuggeranong</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "region-tuggeranong")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>
-												<span className="act-icon" style={{ backgroundColor: '#F15F50' }}></span>
+												<span className="act-icon" style={{ backgroundColor: "#F15F50" }}></span>
 												<p className="act-p-small">Woden</p>
 											</td>
-											<td><code className="hex">#F15F50</code></td>
-											<td><code className="sass-var">$act-colour__region-woden</code></td>
-											<td><code>map-get($act-colour, "region-woden")</code></td>
+											<td>
+												<code className="hex">#F15F50</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-colour__region-woden</code>
+											</td>
+											<td>
+												<code>map-get($act-colour, "region-woden")</code>
+											</td>
 										</tr>
 									</tbody>
 								</table>
