--- a/src/2-design-tokens/shadows.stories.mdx
+++ b/src/2-design-tokens/shadows.stories.mdx
@@ -26,26 +26,17 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="system-introduction--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="design-tokens-overview--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-overview--page">
 											Design Tokens <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="design-tokens-shadows--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-shadows--page">
 											Shadows <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
@@ -66,7 +57,7 @@ import LinkTo from "@storybook/addon-links/react";
 						<div className="act-box">
 							<p>There is a single box-shadown option in this system. The default is no shadow for all components.</p>
 							<div className="act-img">
-								<img src="/images/2-design-tokens-shadow-1.png" alt="Illustration of the available shadow variable"/>
+								<img src="/images/2-design-tokens-shadow-1.png" alt="Illustration of the available shadow variable" />
 								<div className="act-img__description act-p-small">
 									<i class="fa-solid fa-circle-info"></i> Illustration of the available shadow variable
 								</div>
@@ -84,9 +75,15 @@ import LinkTo from "@storybook/addon-links/react";
 									<tbody>
 										<tr>
 											<td>Shadow 1</td>
-											<td><code>0px 8px 20px rgba(0, 0, 0, 0.15)</code></td>
-											<td><code className="sass-var">$act-shadow__one</code></td>
-											<td><code className="sass-var">map-get($act-shadow, "one")</code></td>
+											<td>
+												<code>0px 8px 20px rgba(0, 0, 0, 0.15)</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-shadow__one</code>
+											</td>
+											<td>
+												<code className="sass-var">map-get($act-shadow, "one")</code>
+											</td>
 										</tr>
 									</tbody>
 								</table>
