--- a/src/2-design-tokens/spacing.stories.mdx
+++ b/src/2-design-tokens/spacing.stories.mdx
@@ -26,26 +26,17 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="system-introduction--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="design-tokens-overview--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-overview--page">
 											Design Tokens <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo
-											className="act-breadcrumbs__crumb__link"
-											kind="design-tokens-spacing--page"
-										>
+										<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-spacing--page">
 											Spacing <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
@@ -68,7 +59,7 @@ import LinkTo from "@storybook/addon-links/react";
 							<p>Spacing follows a 4-pixel unit in this system, with each spacing variable evenly divisible by 4.</p>
 							<p>Spacing in this system is available as both Sass Variables and Maps.</p>
 							<div className="act-img">
-								<img src="/images/2-design-tokens-spacing-1.png" alt="Illustration of the available spacing variables"/>
+								<img src="/images/2-design-tokens-spacing-1.png" alt="Illustration of the available spacing variables" />
 								<div className="act-img__description act-p-small">
 									<i class="fa-solid fa-circle-info"></i> Illustration of the available spacing variables
 								</div>
@@ -86,57 +77,111 @@ import LinkTo from "@storybook/addon-links/react";
 									<tbody>
 										<tr>
 											<td>Space 0</td>
-											<td><code>4px</code></td>
-											<td><code className="sass-var">$act-space__desktop-0</code></td>
-											<td><code className="sass-var">map-get($act-space, "desktop-0")</code></td>
+											<td>
+												<code>4px</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-space__desktop-0</code>
+											</td>
+											<td>
+												<code className="sass-var">map-get($act-space, "desktop-0")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>Space 1</td>
-											<td><code>8px</code></td>
-											<td><code className="sass-var">$act-space__desktop-1</code></td>
-											<td><code className="sass-var">map-get($act-space, "desktop-1")</code></td>
+											<td>
+												<code>8px</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-space__desktop-1</code>
+											</td>
+											<td>
+												<code className="sass-var">map-get($act-space, "desktop-1")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>Space 2</td>
-											<td><code>16px</code></td>
-											<td><code className="sass-var">$act-space__desktop-2</code></td>
-											<td><code className="sass-var">map-get($act-space, "desktop-2")</code></td>
+											<td>
+												<code>16px</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-space__desktop-2</code>
+											</td>
+											<td>
+												<code className="sass-var">map-get($act-space, "desktop-2")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>Space 3</td>
-											<td><code>24px</code></td>
-											<td><code className="sass-var">$act-space__desktop-3</code></td>
-											<td><code className="sass-var">map-get($act-space, "desktop-3")</code></td>
+											<td>
+												<code>24px</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-space__desktop-3</code>
+											</td>
+											<td>
+												<code className="sass-var">map-get($act-space, "desktop-3")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>Space 4</td>
-											<td><code>32px</code></td>
-											<td><code className="sass-var">$act-space__desktop-4</code></td>
-											<td><code className="sass-var">map-get($act-space, "desktop-4")</code></td>
+											<td>
+												<code>32px</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-space__desktop-4</code>
+											</td>
+											<td>
+												<code className="sass-var">map-get($act-space, "desktop-4")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>Space 5</td>
-											<td><code>48px</code></td>
-											<td><code className="sass-var">$act-space__desktop-5</code></td>
-											<td><code className="sass-var">map-get($act-space, "desktop-5")</code></td>
+											<td>
+												<code>48px</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-space__desktop-5</code>
+											</td>
+											<td>
+												<code className="sass-var">map-get($act-space, "desktop-5")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>Space 6</td>
-											<td><code>64px</code></td>
-											<td><code className="sass-var">$act-space__desktop-6</code></td>
-											<td><code className="sass-var">map-get($act-space, "desktop-6")</code></td>
+											<td>
+												<code>64px</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-space__desktop-6</code>
+											</td>
+											<td>
+												<code className="sass-var">map-get($act-space, "desktop-6")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>Space 7</td>
-											<td><code>80px</code></td>
-											<td><code className="sass-var">$act-space__desktop-7</code></td>
-											<td><code className="sass-var">map-get($act-space, "desktop-7")</code></td>
+											<td>
+												<code>80px</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-space__desktop-7</code>
+											</td>
+											<td>
+												<code className="sass-var">map-get($act-space, "desktop-7")</code>
+											</td>
 										</tr>
 										<tr>
 											<td>Space 8</td>
-											<td><code>124px</code></td>
-											<td><code className="sass-var">$act-space__desktop-8</code></td>
-											<td><code className="sass-var">map-get($act-space, "desktop-8")</code></td>
+											<td>
+												<code>124px</code>
+											</td>
+											<td>
+												<code className="sass-var">$act-space__desktop-8</code>
+											</td>
+											<td>
+												<code className="sass-var">map-get($act-space, "desktop-8")</code>
+											</td>
 										</tr>
 									</tbody>
 								</table>
