--- a/src/2-design-tokens/typography.stories.mdx
+++ b/src/2-design-tokens/typography.stories.mdx
@@ -26,17 +26,26 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="system-introduction--page"
+										>
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-overview--page">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="design-tokens-overview--page"
+										>
 											Design Tokens <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-typography--page">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="design-tokens-typography--page"
+										>
 											Typography <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
@@ -56,19 +65,28 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-col act-col-sm-12">
 						<div className="act-box">
 							<h2>Fonts</h2>
-							<p>The ACT Government Design System utilises two font families, Montserrat and Source Sans Pro, throughout the system.</p>
+							<p>
+								The ACT Government Design System utilises two font families,
+								Montserrat and Source Sans Pro, throughout the system.
+							</p>
 						</div>
 					</div>
 					<div className="act-col act-col-sm-6">
 						<div className="act-box">
 							<h3>Montserrat</h3>
 							<p style={{ fontFamily: "Montserrat" }}>
-								The old posters and signs in the Montserrat neighbourhood of Buenos Aires inspired Julieta Ulanovsky to design this typeface and capture the beauty of urban
-								typography.
+								The old posters and signs in the Montserrat neighbourhood of
+								Buenos Aires inspired Julieta Ulanovsky to design this typeface
+								and capture the beauty of urban typography.
 							</p>
 							<p>
-								<a href="https://fonts.google.com/specimen/Montserrat/" target="_blank" title="Google Fonts">
-									Montserrat on Google Fonts <i className="fa-solid fa-arrow-up-right-from-square"></i>
+								<a
+									href="https://fonts.google.com/specimen/Montserrat/"
+									target="_blank"
+									title="Google Fonts"
+								>
+									Montserrat on Google Fonts{" "}
+									<i className="fa-solid fa-arrow-up-right-from-square"></i>
 								</a>
 							</p>
 						</div>
@@ -77,11 +95,18 @@ import LinkTo from "@storybook/addon-links/react";
 						<div className="act-box">
 							<h3 style={{ fontFamily: "Source Sans Pro" }}>Source Sans Pro</h3>
 							<p style={{ fontFamily: "Source Sans Pro" }}>
-								Source® Sans Pro, Adobe's first open source typeface family, was designed by Paul D. Hunt. It is a sans serif typeface intended to work well in user interfaces.
+								Source® Sans Pro, Adobe's first open source typeface family, was
+								designed by Paul D. Hunt. It is a sans serif typeface intended
+								to work well in user interfaces.
 							</p>
 							<p>
-								<a href="https://fonts.google.com/specimen/Source+Sans+Pro/" target="_blank" title="Google Fonts">
-									Source Sans Pro on Google Fonts <i className="fa-solid fa-arrow-up-right-from-square"></i>
+								<a
+									href="https://fonts.google.com/specimen/Source+Sans+Pro/"
+									target="_blank"
+									title="Google Fonts"
+								>
+									Source Sans Pro on Google Fonts{" "}
+									<i className="fa-solid fa-arrow-up-right-from-square"></i>
 								</a>
 							</p>
 						</div>
