--- a/src/0-system/0-introduction.stories.mdx
+++ b/src/0-system/0-introduction.stories.mdx
@@ -26,12 +26,18 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="system-introduction--page"
+										>
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="system-introduction--page"
+										>
 											Introduction <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
@@ -48,53 +54,122 @@ import LinkTo from "@storybook/addon-links/react";
 		<div className="act-flex__container">
 			<div className="act-flex__grid">
 				<div className="act-flex__row">
-					<div className="act-col act-col-sm-3">
+					<div className="act-col act-col-sm-12">
 						<div className="act-box">
-							<LinkTo className="act-button act-button__normal act-button__primary" kind="system-introduction--page">
-								System
-							</LinkTo>
-						</div>
-					</div>
-					<div className="act-col act-col-sm-3">
-						<div className="act-box">
-							<LinkTo className="act-button act-button__normal act-button__primary" kind="guidelines-overview--page">
-								Guidelines
-							</LinkTo>
-						</div>
-					</div>
-					<div className="act-col act-col-sm-3">
-						<div className="act-box">
-							<LinkTo className="act-button act-button__normal act-button__primary" kind="design-tokens-overview--page">
-								Design Tokens
-							</LinkTo>
-						</div>
-					</div>
-					<div className="act-col act-col-sm-3">
-						<div className="act-box">
-							<LinkTo className="act-button act-button__normal act-button__primary" kind="layout-overview--page">
-								Layout
-							</LinkTo>
-						</div>
-					</div>
-					<div className="act-col act-col-sm-3">
-						<div className="act-box">
-							<LinkTo className="act-button act-button__normal act-button__primary" kind="components-overview--page">
-								Components
-							</LinkTo>
-						</div>
-					</div>
-					<div className="act-col act-col-sm-3">
-						<div className="act-box">
-							<LinkTo className="act-button act-button__normal act-button__primary" kind="patterns-overview--page">
-								Patterns
-							</LinkTo>
-						</div>
-					</div>
-					<div className="act-col act-col-sm-3">
-						<div className="act-box">
-							<LinkTo className="act-button act-button__normal act-button__primary" kind="previews-overview--page">
-								Previews
-							</LinkTo>
+							<div className="act-card-grid">
+								<LinkTo
+									className="act-card act-card__homepage act-card__feature--none"
+									kind="system-introduction--page"
+								>
+									<div class="act-card__container">
+										<div class="act-card__content">
+											<div class="act-card__icon">
+												<i class="fa-solid fa-layer-group"></i>
+											</div>
+											<div class="act-card__title">Design System</div>
+											<div class="act-card__cta">
+												<i class="fa-solid fa-arrow-right"></i>
+											</div>
+										</div>
+									</div>
+								</LinkTo>
+								<LinkTo
+									className="act-card act-card__homepage act-card__feature--none"
+									kind="guidelines-overview--page"
+								>
+									<div class="act-card__container">
+										<div class="act-card__content">
+											<div class="act-card__icon">
+												<i class="fa-solid fa-scale-balanced"></i>
+											</div>
+											<div class="act-card__title">Guidelines</div>
+											<div class="act-card__cta">
+												<i class="fa-solid fa-arrow-right"></i>
+											</div>
+										</div>
+									</div>
+								</LinkTo>
+								<LinkTo
+									className="act-card act-card__homepage act-card__feature--none"
+									kind="design-tokens-overview--page"
+								>
+									<div class="act-card__container">
+										<div class="act-card__content">
+											<div class="act-card__icon">
+												<i class="fa-solid fa-ticket"></i>
+											</div>
+											<div class="act-card__title">Design Tokens</div>
+											<div class="act-card__cta">
+												<i class="fa-solid fa-arrow-right"></i>
+											</div>
+										</div>
+									</div>
+								</LinkTo>
+								<LinkTo
+									className="act-card act-card__homepage act-card__feature--none"
+									kind="layout-overview--page"
+								>
+									<div class="act-card__container">
+										<div class="act-card__content">
+											<div class="act-card__icon">
+												<i class="fa-solid fa-table-columns"></i>
+											</div>
+											<div class="act-card__title">Layout</div>
+											<div class="act-card__cta">
+												<i class="fa-solid fa-arrow-right"></i>
+											</div>
+										</div>
+									</div>
+								</LinkTo>
+								<LinkTo
+									className="act-card act-card__homepage act-card__feature--none"
+									kind="components-overview--page"
+								>
+									<div class="act-card__container">
+										<div class="act-card__content">
+											<div class="act-card__icon">
+												<i class="fa-solid fa-play"></i>
+											</div>
+											<div class="act-card__title">Components</div>
+											<div class="act-card__cta">
+												<i class="fa-solid fa-arrow-right"></i>
+											</div>
+										</div>
+									</div>
+								</LinkTo>
+								<LinkTo
+									className="act-card act-card__homepage act-card__feature--none"
+									kind="patterns-overview--page"
+								>
+									<div class="act-card__container">
+										<div class="act-card__content">
+											<div class="act-card__icon">
+												<i class="fa-solid fa-shapes"></i>
+											</div>
+											<div class="act-card__title">Patterns</div>
+											<div class="act-card__cta">
+												<i class="fa-solid fa-arrow-right"></i>
+											</div>
+										</div>
+									</div>
+								</LinkTo>
+								<LinkTo
+									className="act-card act-card__homepage act-card__feature--none"
+									kind="previews-overview--page"
+								>
+									<div class="act-card__container">
+										<div class="act-card__content">
+											<div class="act-card__icon">
+												<i class="fa-solid fa-eye"></i>
+											</div>
+											<div class="act-card__title">Previews</div>
+											<div class="act-card__cta">
+												<i class="fa-solid fa-arrow-right"></i>
+											</div>
+										</div>
+									</div>
+								</LinkTo>
+							</div>
 						</div>
 					</div>
 				</div>
