--- a/src/0-system/roles.stories.mdx
+++ b/src/0-system/roles.stories.mdx
@@ -26,13 +26,20 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="system-introduction--page"
+										>
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-roles-responsibilities--page">
-											Roles & responsibilities <i className="fa-solid fa-angle-right"></i>
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="system-roles-responsibilities--page"
+										>
+											Roles & responsibilities{" "}
+											<i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 								</ul>
