--- a/src/2-design-tokens/radius.stories.mdx
+++ b/src/2-design-tokens/radius.stories.mdx
@@ -26,17 +26,26 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="system-introduction--page"
+										>
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-overview--page">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="design-tokens-overview--page"
+										>
 											Design Tokens <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-radius--page">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="design-tokens-radius--page"
+										>
 											Radius <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
@@ -55,11 +64,18 @@ import LinkTo from "@storybook/addon-links/react";
 				<div className="act-flex__row">
 					<div className="act-col act-col-sm-12">
 						<div className="act-box">
-							<p>There are several border-radius options in this system. The default is Radius 0 for all components.</p>
+							<p>
+								There are several border-radius options in this system. The
+								default is Radius 0 for all components.
+							</p>
 							<div className="act-img">
-								<img src="/images/2-design-tokens-radius-1.png" alt="Illustration of the available radius variables" />
+								<img
+									src="/images/2-design-tokens-radius-1.png"
+									alt="Illustration of the available radius variables"
+								/>
 								<div className="act-img__description act-p-small">
-									<i class="fa-solid fa-circle-info"></i> Illustration of the available radius variables
+									<i class="fa-solid fa-circle-info"></i> Illustration of the available
+									radius variables
 								</div>
 							</div>
 							<div className="act-table-container">
@@ -82,7 +98,9 @@ import LinkTo from "@storybook/addon-links/react";
 												<code className="sass-var">$act-radius__desktop-0</code>
 											</td>
 											<td>
-												<code className="sass-var">map-get($act-radius, "desktop-0")</code>
+												<code className="sass-var">
+													map-get($act-radius, "desktop-0")
+												</code>
 											</td>
 										</tr>
 										<tr>
@@ -94,7 +112,9 @@ import LinkTo from "@storybook/addon-links/react";
 												<code className="sass-var">$act-radius__desktop-4</code>
 											</td>
 											<td>
-												<code className="sass-var">map-get($act-radius, "desktop-4")</code>
+												<code className="sass-var">
+													map-get($act-radius, "desktop-4")
+												</code>
 											</td>
 										</tr>
 										<tr>
@@ -103,10 +123,14 @@ import LinkTo from "@storybook/addon-links/react";
 												<code>16px</code>
 											</td>
 											<td>
-												<code className="sass-var">$act-radius__desktop-16</code>
+												<code className="sass-var">
+													$act-radius__desktop-16
+												</code>
 											</td>
 											<td>
-												<code className="sass-var">map-get($act-radius, "desktop-16")</code>
+												<code className="sass-var">
+													map-get($act-radius, "desktop-16")
+												</code>
 											</td>
 										</tr>
 										<tr>
@@ -115,10 +139,14 @@ import LinkTo from "@storybook/addon-links/react";
 												<code>50%</code>
 											</td>
 											<td>
-												<code className="sass-var">$act-radius__desktop-full</code>
+												<code className="sass-var">
+													$act-radius__desktop-full
+												</code>
 											</td>
 											<td>
-												<code className="sass-var">map-get($act-radius, "desktop-full")</code>
+												<code className="sass-var">
+													map-get($act-radius, "desktop-full")
+												</code>
 											</td>
 										</tr>
 									</tbody>
