--- a/src/2-design-tokens/spacing.stories.mdx
+++ b/src/2-design-tokens/spacing.stories.mdx
@@ -26,17 +26,26 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="system-introduction--page"
+										>
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-overview--page">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="design-tokens-overview--page"
+										>
 											Design Tokens <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-spacing--page">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="design-tokens-spacing--page"
+										>
 											Spacing <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
@@ -55,13 +64,26 @@ import LinkTo from "@storybook/addon-links/react";
 				<div className="act-flex__row">
 					<div className="act-col act-col-sm-12">
 						<div className="act-box">
-							<p>Consistent use of spacing provides the foundation for harmonious and accurately positioned elements onscreen.</p>
-							<p>Spacing follows a 4-pixel unit in this system, with each spacing variable evenly divisible by 4.</p>
-							<p>Spacing in this system is available as both Sass Variables and Maps.</p>
+							<p>
+								Consistent use of spacing provides the foundation for harmonious
+								and accurately positioned elements onscreen.
+							</p>
+							<p>
+								Spacing follows a 4-pixel unit in this system, with each spacing
+								variable evenly divisible by 4.
+							</p>
+							<p>
+								Spacing in this system is available as both Sass Variables and
+								Maps.
+							</p>
 							<div className="act-img">
-								<img src="/images/2-design-tokens-spacing-1.png" alt="Illustration of the available spacing variables" />
+								<img
+									src="/images/2-design-tokens-spacing-1.png"
+									alt="Illustration of the available spacing variables"
+								/>
 								<div className="act-img__description act-p-small">
-									<i class="fa-solid fa-circle-info"></i> Illustration of the available spacing variables
+									<i class="fa-solid fa-circle-info"></i> Illustration of the available
+									spacing variables
 								</div>
 							</div>
 							<div className="act-table-container">
@@ -84,7 +106,9 @@ import LinkTo from "@storybook/addon-links/react";
 												<code className="sass-var">$act-space__desktop-0</code>
 											</td>
 											<td>
-												<code className="sass-var">map-get($act-space, "desktop-0")</code>
+												<code className="sass-var">
+													map-get($act-space, "desktop-0")
+												</code>
 											</td>
 										</tr>
 										<tr>
@@ -96,7 +120,9 @@ import LinkTo from "@storybook/addon-links/react";
 												<code className="sass-var">$act-space__desktop-1</code>
 											</td>
 											<td>
-												<code className="sass-var">map-get($act-space, "desktop-1")</code>
+												<code className="sass-var">
+													map-get($act-space, "desktop-1")
+												</code>
 											</td>
 										</tr>
 										<tr>
@@ -108,7 +134,9 @@ import LinkTo from "@storybook/addon-links/react";
 												<code className="sass-var">$act-space__desktop-2</code>
 											</td>
 											<td>
-												<code className="sass-var">map-get($act-space, "desktop-2")</code>
+												<code className="sass-var">
+													map-get($act-space, "desktop-2")
+												</code>
 											</td>
 										</tr>
 										<tr>
@@ -120,7 +148,9 @@ import LinkTo from "@storybook/addon-links/react";
 												<code className="sass-var">$act-space__desktop-3</code>
 											</td>
 											<td>
-												<code className="sass-var">map-get($act-space, "desktop-3")</code>
+												<code className="sass-var">
+													map-get($act-space, "desktop-3")
+												</code>
 											</td>
 										</tr>
 										<tr>
@@ -132,7 +162,9 @@ import LinkTo from "@storybook/addon-links/react";
 												<code className="sass-var">$act-space__desktop-4</code>
 											</td>
 											<td>
-												<code className="sass-var">map-get($act-space, "desktop-4")</code>
+												<code className="sass-var">
+													map-get($act-space, "desktop-4")
+												</code>
 											</td>
 										</tr>
 										<tr>
@@ -144,7 +176,9 @@ import LinkTo from "@storybook/addon-links/react";
 												<code className="sass-var">$act-space__desktop-5</code>
 											</td>
 											<td>
-												<code className="sass-var">map-get($act-space, "desktop-5")</code>
+												<code className="sass-var">
+													map-get($act-space, "desktop-5")
+												</code>
 											</td>
 										</tr>
 										<tr>
@@ -156,7 +190,9 @@ import LinkTo from "@storybook/addon-links/react";
 												<code className="sass-var">$act-space__desktop-6</code>
 											</td>
 											<td>
-												<code className="sass-var">map-get($act-space, "desktop-6")</code>
+												<code className="sass-var">
+													map-get($act-space, "desktop-6")
+												</code>
 											</td>
 										</tr>
 										<tr>
@@ -168,7 +204,9 @@ import LinkTo from "@storybook/addon-links/react";
 												<code className="sass-var">$act-space__desktop-7</code>
 											</td>
 											<td>
-												<code className="sass-var">map-get($act-space, "desktop-7")</code>
+												<code className="sass-var">
+													map-get($act-space, "desktop-7")
+												</code>
 											</td>
 										</tr>
 										<tr>
@@ -180,7 +218,9 @@ import LinkTo from "@storybook/addon-links/react";
 												<code className="sass-var">$act-space__desktop-8</code>
 											</td>
 											<td>
-												<code className="sass-var">map-get($act-space, "desktop-8")</code>
+												<code className="sass-var">
+													map-get($act-space, "desktop-8")
+												</code>
 											</td>
 										</tr>
 									</tbody>
