--- a/src/4-components/A1-Accordion/a1-accordion.stories.mdx
+++ b/src/4-components/A1-Accordion/a1-accordion.stories.mdx
@@ -26,17 +26,26 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="system-introduction--page"
+										>
 											Design System <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="components-overview--page">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="components-overview--page"
+										>
 											Components <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="components-accordion-details--page">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="components-accordion-details--page"
+										>
 											Accordion <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
